# zummon

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  gen_readme.go  justfile
.github/workflows/: build.yml
assets/: zummon_logogram.blend
src/: cli.rs  focus.rs  launch.rs  main.rs  traits.rs
src/adapters/: hyprland.rs  kwin.rs  macos.rs  mod.rs  mutter.rs  niri.rs  sway.rs  windows.rs
