[package]
name = "zummon"
version = "0.1.0"
edition = "2024"
description = "Summon an app to the foreground or launch it if not running – with heuristic window matching, latest version selection, and more"
authors = ["H. Cederblad"]
license = "MIT"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8.0"
semver = "1.0"
glob = "0.3"
regex = "1.12"
async-trait = "0.1"
shell-words = "1.1"
jaro_winkler = "0.2.1"
dirs = "6.0"
